--- a/app/views/designers/_card.html.erb
+++ b/app/views/designers/_card.html.erb
@@ -1,4 +1,4 @@
-<%= link_to designer_path(card) do %>
+<%= link_to designer_path(card.slug) do %>
   <div class="card <%= class_name %>" data-card-id="<%= card.id %>">
     <div class="bg-card">
       <div class="flex-info-card">
