--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -77,7 +77,7 @@
     <div class="box-card" id="boxCard">
       <%= render partial: 'oeuvres/card', collection: @oeuvres, as: :card, locals: { class_name: 'card' } %>
     </div>
-    <div id="load-more-trigger" data-type="oeuvres"></div>
+    <div id="load-more-trigger" data-offset="2" data-loaded-ids="<%= @oeuvres.pluck(:id).join(',') %>"></div>
   </div>
   <div class="button-nav">
     <button class="arrow-button up">
@@ -103,16 +103,29 @@
     let isLoading = false;
 
     // Fonction de chargement des cartes
-    function loadMoreCards() {
+   function loadMoreCards() {
       if (isLoading) return;
       isLoading = true;
-      const url = loadMoreTrigger.dataset.type; // Endpoint pour charger les cartes
-      fetch(`/oeuvres/load_more?type=${url}`)
+      const offset = loadMoreTrigger.dataset.offset;
+      const loadedIds = loadMoreTrigger.dataset.loadedIds.split(',');
+
+      fetch(`/oeuvres/load_more?offset=${offset}&loaded_ids=${loadedIds.join(',')}`)
         .then((response) => response.text())
         .then((html) => {
-          const boxCard = document.getElementById("boxCard");
-          boxCard.insertAdjacentHTML("beforeend", html);
+          container.insertAdjacentHTML("beforeend", html);
           isLoading = false;
+
+          // Mettre à jour l'offset
+          loadMoreTrigger.dataset.offset = parseInt(offset) + 2;
+
+          // Mettre à jour les IDs chargés
+          const newLoadedIds = Array.from(container.querySelectorAll('.card')).map(card => card.dataset.id);
+          loadMoreTrigger.dataset.loadedIds = [...loadedIds, ...newLoadedIds].join(',');
+
+          // Vérifier s'il reste des œuvres à charger
+          if (html.trim() === "") {
+            loadMoreTrigger.style.display = "none";
+          }
         })
         .catch((err) => {
           console.error("Erreur lors du chargement des cartes :", err);
