test scroll phone

--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -8,7 +8,7 @@
       display: none;
     }
     #cardContainer {
-      height: calc(100dvh - 50px); /* Ajuster la hauteur pour les petits écrans */
+      height: calc(100vh - 50px); /* Ajuster la hauteur pour les petits écrans */
     }
   }
   #cardContainer {
