--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -6,6 +6,6 @@
   <%end%>
   <h1>Créer une liste</h1>
 </section>
-<section class="grid-1" style="padding-bottom: 32px;">
+<section class="grid-1" style="padding-bottom: 96px; padding-top: 32px;">
   <%= render 'form' %>
 </section>
