--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -77,6 +77,33 @@ p{
 .center{
   text-align: center;
 }
+
+h1,h2,h3 {
+  color: $primary-color;
+}
+p{
+  color: $text-color;
+}
+
+.black{
+  color: $primary-color;
+}
+body.dark h1 {
+  color: $secondary-color;
+}
+body.dark h2 {
+  color: $secondary-color;
+}
+body.dark h3{
+  color: $secondary-color;
+}
+body.dark p{
+  color: $dark-text-color;
+}
+
+body.dark .black{
+  color: $secondary-color;
+}
 @media screen and (min-width:426px) and (max-width: 600px) {
   h1 {
     font-size: 26px;
@@ -114,35 +141,35 @@ p{
 
 
 
-@media (prefers-color-scheme: dark) {
-  h1,h2,h3 {
-    color: $secondary-color;
-  }
+// @media (prefers-color-scheme: dark) {
+//   h1,h2,h3 {
+//     color: $secondary-color;
+//   }
 
-  p{
-    color: $dark-text-color;
-  }
+//   p{
+//     color: $dark-text-color;
+//   }
 
-  .black{
-    color: $secondary-color;
-  }
-  body.light h1 {
-    color: $primary-color;
-  }
-  body.light h2 {
-    color: $primary-color;
-  }
-  body.light h3{
-    color: $primary-color;
-  }
-  body.light p{
-    color: $text-color;
-  }
+//   .black{
+//     color: $secondary-color;
+//   }
+//   body.light h1 {
+//     color: $primary-color;
+//   }
+//   body.light h2 {
+//     color: $primary-color;
+//   }
+//   body.light h3{
+//     color: $primary-color;
+//   }
+//   body.light p{
+//     color: $text-color;
+//   }
 
-  body.light .black{
-    color: $primary-color;
-  }
-}
+//   body.light .black{
+//     color: $primary-color;
+//   }
+// }
 
 @media (prefers-color-scheme: light) {
   h1,h2,h3 {
