--- a/app/assets/stylesheets/components/_listmodal.scss
+++ b/app/assets/stylesheets/components/_listmodal.scss
@@ -43,6 +43,10 @@
    position: relative;
    background-color: rgba(255, 255, 255, 0.8);
    box-sizing: border-box;
+   &:hover{
+      cursor: pointer;
+      opacity: 0.9;
+   }
  }
 
  .card-title-add {
@@ -56,6 +60,7 @@
 
  .card-checked {
    opacity: 0.5;
+   border: 3px solid #E9E9E9;
  }
 
  .hidden {
