--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -5,9 +5,25 @@
 }
 
 .header-show {
-  transition: height 0.3s ease, background-color 0.3s ease;
+  transition: height 0.6s ease, background-color 0.3s ease;
 }
 
+.header-show.small-height {
+  height: 38dvh !important;
+  min-height: 280px;
+  z-index: 999;
+}
+
+.header-show.small-height::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
 .header-top {
   opacity: 0;
   transition: opacity 0.3s ease;
@@ -57,28 +73,15 @@
   bottom: 50px;
   right: 5vw;
 }
-
-.small-height {
-  height: 38dvh !important;
-  min-height: 280px;
-  z-index: 999;
-}
-
-.small-height::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: -1;
-}
-
 .text-show {
   width: 60vw;
   max-width: 1000px;
   margin-top: 82dvh;
+  transition: margin-top 0.3s ease;
+}
+
+ .text-show.small-height {
+  margin-top: 48dvh; // Ajustez cette valeur selon vos besoins
 }
 
 .margin-text-header {
