--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -146,7 +146,7 @@
   </div>
   <div class="content-show">
     <div class="text-show">
-      <div class="title-box-oeuvre hidden">
+      <div class="title-box-oeuvre">
         <p class="subtitle-card"><%= designer.countries.map(&:name).join(' & ') %></p>
         <h1 class="title-card"><%= designer.nom_designer %></h1>
       </div>
