Small height référence

--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -464,7 +464,7 @@
     right: 5vw;
   }
 
-  .small-height {
+  .header-show.small-height {
     height: 320px !important;
   }
 
@@ -574,7 +574,7 @@
     height: 75dvh;
   }
 
-  .small-height {
+  .header-show.small-height  {
     height: 320px !important;
   }
 
@@ -705,7 +705,7 @@
     height: 75dvh;
   }
 
-  .small-height {
+  .header-show.small-height  {
     height: 320px !important;
   }
 
