--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -4,7 +4,7 @@
   display: none;
   position: fixed;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   top: 0px;
   left: 0;
   width: 100%;
@@ -15,13 +15,16 @@
 }
 
 .popup-content {
+  margin-top: 10dvh;
   background-color: #ffffff;
   border-radius: 10px;
   z-index: 1000;
   width: 700px;
-  padding-bottom: 45px
+  padding-bottom: 45px;
 }
-
+.popup-inner{
+  padding: 0 5vw;
+}
 .top-popup {
   border-radius: 10px 10px 0 0;
   height: 80px;
