info références/designers scroll

--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -98,9 +98,11 @@
 }
 
 .hidden {
-  display: none !important;
+  display: none;
 }
-
+.info-card-first-content{
+  display: block;
+}
 .header-top {
   display: none;
   position: absolute;
